--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
   <title>Árt</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="src/assets/img/Art_2.ico">
+  <link rel="icon" type="image/x-icon" href="src/assets/img/IconLogo.ico">
   <link href="https://fonts.googleapis.com/css?family=Nunito:400,600,700" rel="stylesheet">
 
 </head>
