--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,35 @@
   <link rel="icon" type="image/x-icon" href="src/assets/img/IconLogo.ico">
   <link href="https://fonts.googleapis.com/css?family=Nunito:400,600,700" rel="stylesheet">
 
+  <link href="layouts/horizontal-light-menu/css/light/loader.css" rel="stylesheet" type="text/css" />
+  <link href="layouts/horizontal-light-menu/css/dark/loader.css" rel="stylesheet" type="text/css" />
+  <script src="../layouts/horizontal-light-menu/loader.js"></script>
+
+  <!-- BEGIN GLOBAL MANDATORY STYLES -->
+  <link href="https://fonts.googleapis.com/css?family=Nunito:400,600,700" rel="stylesheet">
+  <link href="src/bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
+  <link href="layouts/horizontal-light-menu/css/light/plugins.css" rel="stylesheet" type="text/css" />
+  <link href="layouts/horizontal-light-menu/css/dark/plugins.css" rel="stylesheet" type="text/css" />
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+
+  <!-- END GLOBAL MANDATORY STYLES -->
+  <link href="src/assets/css/light/components/accordions.css" rel="stylesheet" type="text/css">
+  <link href="src/assets/css/dark/components/accordions.css" rel="stylesheet" type="text/css">
+  <!-- BEGIN PAGE LEVEL PLUGINS/CUSTOM STYLES -->
+  <link rel="stylesheet" type="text/css" href="src/plugins/src/bootstrap-touchspin/jquery.bootstrap-touchspin.min.css">
+  <link rel="stylesheet" type="text/css" href="src/plugins/src/glightbox/glightbox.min.css">
+  <link rel="stylesheet" type="text/css" href="src/plugins/src/splide/splide.min.css">
+
+  <link rel="stylesheet" type="text/css" href="src/assets/css/light/components/tabs.css">
+  <link rel="stylesheet" type="text/css" href="src/assets/css/light/apps/ecommerce-details.css">
+  
+  <link rel="stylesheet" type="text/css" href="src/assets/css/dark/components/tabs.css">
+  <link rel="stylesheet" type="text/css" href="src/assets/css/dark/apps/ecommerce-details.css">
+
+
+
+
+
 </head>
 <body>
   <!-- BEGIN LOADER -->
@@ -16,5 +45,20 @@
   </div></div></div>
   <!--  END LOADER -->
   <app-root></app-root>
+
+  <script src="src/plugins/src/global/vendors.min.js" ></script>
+
+  <script src="src/bootstrap/js/bootstrap.bundle.min.js" ></script>
+  <script src="src/plugins/src/perfect-scrollbar/perfect-scrollbar.min.js"></script>
+  <script src="src/plugins/src/mousetrap/mousetrap.min.js"></script>
+  <script src="src/plugins/src/waves/waves.min.js"></script>
+  <script src="layouts/horizontal-light-menu/app.js"></script>
+  <script src="src/plugins/src/splide/splide.min.js"></script>
+
+
+  <!-- <script src="../src/plugins/src/bootstrap-touchspin/jquery.bootstrap-touchspin.min.js" ></script>
+    <script src="../src/plugins/src/glightbox/glightbox.min.js" ></script>
+    <script src="../src/plugins/src/splide/splide.min.js" ></script>
+    <script src="../src/assets/js/apps/ecommerce-details.js" ></script>    -->
 </body>
 </html>
