them login register va fix bug js lan thu n

--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="src/assets/img/IconLogo.ico">
   <link href="https://fonts.googleapis.com/css?family=Nunito:400,600,700" rel="stylesheet">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js" ></script>
+
 
 </head>
 <body>
@@ -16,5 +18,19 @@
   </div></div></div>
   <!--  END LOADER -->
   <app-root></app-root>
+
+  <script src="src/plugins/src/global/vendors.min.js" ></script>
+  <script src="src/bootstrap/js/bootstrap.bundle.min.js" ></script>
+  <script src="src/plugins/src/perfect-scrollbar/perfect-scrollbar.min.js"></script>
+  <script src="src/plugins/src/mousetrap/mousetrap.min.js"></script>
+  <script src="src/plugins/src/waves/waves.min.js"></script>
+  <!-- <script src="layouts/horizontal-light-menu/app.js"></script> -->
+  <script src="src/plugins/src/splide/splide.min.js"></script>
+  <!-- <script src="src/plugins/src/glightbox/glightbox.min.js"></script> -->
+  <script src="src/plugins/src/filepond/filepond.min.js"></script>
+  <script src="src/plugins/src/filepond/FilePondPluginImageTransform.min.js"></script>
+
+
+
 </body>
 </html>
