fix loi linh tinh

--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
 
 
 </head>
-<body>
+<body class="layout-boxed">
   <!-- BEGIN LOADER -->
     <div id="load_screen"> <div class="loader"> <div class="loader-content">
       <div class="spinner-grow align-self-center"></div>
