them calendar user-list

--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="IconLogo.ico">
   <link href="https://fonts.googleapis.com/css?family=Nunito:400,600,700" rel="stylesheet">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js" ></script>
 
 </head>
 <body>
@@ -16,5 +17,23 @@
   </div></div></div>
   <!--  END LOADER -->
   <app-root></app-root>
+  <script src="src/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <script src="src/plugins/src/perfect-scrollbar/perfect-scrollbar.min.js"></script>
+  <script src="src/plugins/src/mousetrap/mousetrap.min.js"></script>
+  <script src="src/plugins/src/waves/waves.min.js"></script>
+  <!-- <script src="layouts/semi-dark-menu/app.js"></script> -->
+
+  <!-- BEGIN PAGE LEVEL SCRIPTS -->
+  <script src="src/plugins/src/fullcalendar/fullcalendar.min.js"></script>
+  <script src="src/plugins/src/uuid/uuid4.min.js"></script>
+  <!-- END PAGE LEVEL SCRIPTS -->
+  <!--  BEGIN CUSTOM SCRIPTS FILE  -->
+  <script src="src/plugins/src/fullcalendar/custom-fullcalendar.js"></script>  
+  <!--  END CUSTOM SCRIPTS FILE  -->
+
+  <script src="src/plugins/src/global/vendors.min.js"></script>
+  <script src="src/assets/js/custom.js"></script>
+  <script src="src/plugins/src/table/datatable/datatables.js"></script>
+ 
 </body>
 </html>
