Add Edit-Profile New

--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,9 @@
   <link href="https://fonts.googleapis.com/css?family=Nunito:400,600,700" rel="stylesheet">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js" ></script>
 
+      <!-- Billing Address -->
+
+
 
 </head>
 <body class="layout-boxed">
@@ -29,6 +32,9 @@
   <!-- <script src="src/plugins/src/glightbox/glightbox.min.js"></script> -->
   <script src="src/plugins/src/filepond/filepond.min.js"></script>
   <script src="src/plugins/src/filepond/FilePondPluginImageTransform.min.js"></script>
+
+    <!-- Billing Address -->
+
 
 
 
