add table user-list

--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,7 @@
   <script src="src/plugins/src/perfect-scrollbar/perfect-scrollbar.min.js"></script>
   <script src="src/plugins/src/mousetrap/mousetrap.min.js"></script>
   <script src="src/plugins/src/waves/waves.min.js"></script>
-  <!-- <script src="layouts/semi-dark-menu/app.js"></script> -->
+  <!-- <script src="layouts/semi-dark-menu/addActives.js"></script> -->
 
   <!-- BEGIN PAGE LEVEL SCRIPTS -->
   <script src="src/plugins/src/fullcalendar/fullcalendar.min.js"></script>
@@ -34,6 +34,18 @@
   <script src="src/plugins/src/global/vendors.min.js"></script>
   <script src="src/assets/js/custom.js"></script>
   <script src="src/plugins/src/table/datatable/datatables.js"></script>
+  <script src="src/plugins/src/editors/quill/quill.js"></script>
+  <script src="src/plugins/src/filepond/filepond.min.js"></script>
+  <script src="src/plugins/src/filepond/FilePondPluginImagePreview.min.js"></script>
+  <script src="src/plugins/src/filepond/FilePondPluginImageExifOrientation.min.js"></script>
+  <script src="src/plugins/src/filepond/FilePondPluginImageCrop.min.js"></script>
+  <script src="src/plugins/src/filepond/FilePondPluginImageResize.min.js"></script>
+  <script src="src/plugins/src/filepond/FilePondPluginImageTransform.min.js"></script>
+  <script src="src/plugins/src/filepond/filepondPluginFileValidateSize.min.js"></script>
+  <script src="src/plugins/src/tagify/tagify.min.js"></script>
+
+  <script src="src/assets/js/apps/ecommerce-create.js"></script>
+
  
 </body>
 </html>
