them Add-to-cart voi contactUs

--- a/src/index.html
+++ b/src/index.html
@@ -30,7 +30,14 @@
   <script src="src/plugins/src/filepond/filepond.min.js"></script>
   <script src="src/plugins/src/filepond/FilePondPluginImageTransform.min.js"></script>
 
+  <script src="src/plugins/src/table/datatable/datatables.js"></script>
+  <script src="src/plugins/src/table/datatable/button-ext/dataTables.buttons.min.js"></script>
+  <script src="src/assets/js/custom.js"></script>
 
+  <script src="src/assets/js/apps/invoice-list.js"></script>
+  <!-- <script src="../src/plugins/src/leaflet/us-states.js"></script>
+  <script src="../src/plugins/src/leaflet/eu-countries.js"></script> -->
+  <script src="src/plugins/src/leaflet/leaflet.js"></script>
 
 </body>
 </html>
